cluster/apps/anona-counseling-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anona-counseling-page
  labels:
    app.kubernetes.io/name: anona-counseling-page
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: anona-counseling-page
