cluster/apps/anona-counseling-page/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anona-counseling-page
  namespace: default
  annotations:
    gethomepage.dev/description: Anona Counseling landing page
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Hosting
    gethomepage.dev/icon: mdi-hand-heart
    gethomepage.dev/name: Anona Counseling Page
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: envoy-gateway
  hostnames:
    - anonafamilycounseling.com
    - www.anonafamilycounseling.com
    - anonacounselingcenter.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: anona-counseling-page
          port: 80
          weight: 1
